adverserial+victim+query+transforms-fix

--- a/notebooks/case6_adverserial.ipynb
+++ b/notebooks/case6_adverserial.ipynb
@@ -96,6 +96,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-----------------------------------------------------------------------------\n",
+      "\tDataset: cifar_10\n",
+      "\tVictim: resnet50\tAttacker: resnet34\n",
+      "\tQuery Type: coreset\tQuery Size: 20000\tLogits: None\n",
+      "-----------------------------------------------------------------------------\n",
       "Files already downloaded and verified\n",
       "Files already downloaded and verified\n"
      ]
@@ -104,7 +109,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████| 10000/10000 [29:10<00:00,  5.71it/s]"
+      "100%|█████████████████████████████████████| 10000/10000 [14:24<00:00, 11.57it/s]"
      ]
     },
     {
@@ -112,10 +117,10 @@
      "output_type": "stream",
      "text": [
       "total images: 10000\n",
-      "images correctly classified by attacker: 2828\n",
-      "images adverserial for attacker: 1982\n",
-      "images also adverserial for victim: 1067\n",
-      "images with same adverserial label: 122\n"
+      "images correctly classified by attacker: 8043\n",
+      "images adverserial for attacker: 4796\n",
+      "images also adverserial for victim: 399\n",
+      "images with same adverserial label: 237\n"
      ]
     },
     {
@@ -124,141 +129,66 @@
      "text": [
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[37,\n",
-       " 161,\n",
-       " 191,\n",
-       " 301,\n",
-       " 510,\n",
-       " 561,\n",
-       " 638,\n",
-       " 661,\n",
-       " 847,\n",
-       " 867,\n",
-       " 943,\n",
-       " 1117,\n",
-       " 1137,\n",
-       " 1185,\n",
-       " 1398,\n",
-       " 1441,\n",
-       " 1484,\n",
-       " 1556,\n",
-       " 1718,\n",
-       " 1738,\n",
-       " 1855,\n",
-       " 2001,\n",
-       " 2128,\n",
-       " 2195,\n",
-       " 2213,\n",
-       " 2228,\n",
-       " 2375,\n",
-       " 2409,\n",
-       " 2460,\n",
-       " 2570,\n",
-       " 2608,\n",
-       " 3029,\n",
-       " 3118,\n",
-       " 3156,\n",
-       " 3165,\n",
-       " 3268,\n",
-       " 3298,\n",
-       " 3419,\n",
-       " 3511,\n",
-       " 3539,\n",
-       " 3645,\n",
-       " 3718,\n",
-       " 3734,\n",
-       " 3740,\n",
-       " 3778,\n",
-       " 4062,\n",
-       " 4313,\n",
-       " 4330,\n",
-       " 4431,\n",
-       " 4546,\n",
-       " 4551,\n",
-       " 4562,\n",
-       " 4571,\n",
-       " 4752,\n",
-       " 4792,\n",
-       " 5065,\n",
-       " 5093,\n",
-       " 5181,\n",
-       " 5220,\n",
-       " 5374,\n",
-       " 5524,\n",
-       " 5932,\n",
-       " 6394,\n",
-       " 6436,\n",
-       " 6615,\n",
-       " 6618,\n",
-       " 6633,\n",
-       " 6750,\n",
-       " 6752,\n",
-       " 6803,\n",
-       " 6962,\n",
-       " 6982,\n",
-       " 6987,\n",
-       " 7123,\n",
-       " 7143,\n",
-       " 7146,\n",
-       " 7172,\n",
-       " 7175,\n",
-       " 7274,\n",
-       " 7280,\n",
-       " 7282,\n",
-       " 7298,\n",
-       " 7394,\n",
-       " 7460,\n",
-       " 7607,\n",
-       " 7658,\n",
-       " 7754,\n",
-       " 7900,\n",
-       " 8080,\n",
-       " 8084,\n",
-       " 8096,\n",
-       " 8105,\n",
-       " 8288,\n",
-       " 8452,\n",
-       " 8474,\n",
-       " 8478,\n",
-       " 8496,\n",
-       " 8547,\n",
-       " 8558,\n",
-       " 8565,\n",
-       " 8694,\n",
-       " 8731,\n",
-       " 8761,\n",
-       " 8764,\n",
-       " 8779,\n",
-       " 8914,\n",
-       " 9122,\n",
-       " 9144,\n",
-       " 9252,\n",
-       " 9254,\n",
-       " 9336,\n",
-       " 9351,\n",
-       " 9410,\n",
-       " 9634,\n",
-       " 9794,\n",
-       " 9799,\n",
-       " 9818,\n",
-       " 9841,\n",
-       " 9855,\n",
-       " 9895,\n",
-       " 9953,\n",
-       " 9974]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "adverserial_experiment(case4_adverserial, epsilon=0.01, seed=42)"
+    "adversery_generalised, results = adverserial_experiment(case4_adverserial, epsilon=0.01, seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------------------------------------------------------\n",
+      "\tDataset: cifar_10\n",
+      "\tVictim: resnet50\tAttacker: resnet34\n",
+      "\tQuery Type: coreset\tQuery Size: 20000\tLogits: None\n",
+      "-----------------------------------------------------------------------------\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████| 10000/10000 [14:18<00:00, 11.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total images: 10000\n",
+      "images correctly classified by attacker: 8043\n",
+      "images adverserial for attacker: 7381\n",
+      "images also adverserial for victim: 3988\n",
+      "images with same adverserial label: 2120\n",
+      "-----------------------------------------------------------------------------\n",
+      "\tDataset: cifar_10\n",
+      "\tVictim: resnet50\tAttacker: resnet34\n",
+      "\tQuery Type: coreset\tQuery Size: 20000\tLogits: None\n",
+      "-----------------------------------------------------------------------------\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 59%|██████████████████████▌               | 5938/10000 [08:29<05:48, 11.67it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "for epsilon in [0.05, 0.1]:\n",
+    "    adversery_generalised, results = adverserial_experiment(case4_adverserial, epsilon=epsilon, seed=42)"
    ]
   },
   {
