Fresh runs for case1 cifar10

--- a/notebooks/Attacker.ipynb
+++ b/notebooks/Attacker.ipynb
@@ -64,7 +64,7 @@
     "    klogits - 0\n",
     "    Datasest - Cifar10, Cifar100\n",
     "    QueryType - Random, Coreset\n",
-    "    Query Size - 10k, 20k, 30k, 40k, 50k"
+    "    Query Size - 5k, 10k, 25k, 50k"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "source": [
     "case1_cifar10 = {\n",
-    "        \"query_size\": [10000, 20000, 30000, 40000, 50000],\n",
+    "        \"query_size\": [5000, 10000, 25000, 50000],\n",
     "        \"query_type\": ['coreset','random'],\n",
     "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
     "        \"attacker\":[RESNET34],\n",
@@ -88,19 +88,6 @@
     "        \"query_size\": [10000, 20000, 30000, 40000, 50000],\n",
     "        \"query_type\": ['coreset','random'],\n",
     "        \"victim\":[{\"data\": CIFAR_100, \"model_name\": RESNET50 }],\n",
-    "        \"attacker\":[RESNET34],\n",
-    "        \"k_logits\": [None]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "case1_cifar10_finetune  = {\n",
-    "        \"query_size\": [15000, 25000],\n",
-    "        \"query_type\": ['coreset','random'],\n",
-    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
     "        \"attacker\":[RESNET34],\n",
     "        \"k_logits\": [None]\n",
     "}"
