--- a/notebooks/case6_adverserial.ipynb
+++ b/notebooks/case6_adverserial.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 59%|██████████████████████▌               | 5938/10000 [08:29<05:48, 11.67it/s]"
+      "100%|█████████████████████████████████████| 10000/10000 [14:17<00:00, 11.66it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total images: 10000\n",
+      "images correctly classified by attacker: 8043\n",
+      "images adverserial for attacker: 7424\n",
+      "images also adverserial for victim: 6258\n",
+      "images with same adverserial label: 2709\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
