added notebooks for case2

--- a/notebooks/Attacker.ipynb
+++ b/notebooks/Attacker.ipynb
@@ -60,9 +60,22 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "case1_cifar10 = {\n",
+    "case1_cifar10_coreset = {\n",
     "        \"query_size\": [5000, 10000, 25000, 50000],\n",
-    "        \"query_type\": ['coreset','random'],\n",
+    "        \"query_type\": ['coreset'],\n",
+    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
+    "        \"attacker\":[RESNET34],\n",
+    "        \"k_logits\": [None]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "case1_cifar10_random = {\n",
+    "        \"query_size\": [5000, 10000, 25000, 50000],\n",
+    "        \"query_type\": ['random'],\n",
     "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
     "        \"attacker\":[RESNET34],\n",
     "        \"k_logits\": [None]\n",
@@ -97,7 +110,7 @@
     "    Dataset - Cifar10\n",
     "    klogits - 0\n",
     "    QueryType - coreset\n",
-    "    Query Size - 10k, 30k, 50k\n",
+    "    Query Size - 25k\n",
     "    Victim - R34, R50, VGG19\n",
     "    Attacker - R34, R50, VGG19"
    ]
@@ -107,7 +120,7 @@
    "metadata": {},
    "source": [
     "case2_v_resnet34 = {\n",
-    "        \"query_size\": [20000],\n",
+    "        \"query_size\": [25000],\n",
     "        \"query_type\": ['coreset'],\n",
     "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET34}],\n",
     "        \"attacker\":[RESNET34, RESNET50, VGG19_BN],\n",
@@ -120,7 +133,7 @@
    "metadata": {},
    "source": [
     "case2_v_resnet50 = {\n",
-    "        \"query_size\": [20000],\n",
+    "        \"query_size\": [25000],\n",
     "        \"query_type\": ['coreset'],\n",
     "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
     "        \"attacker\":[RESNET50, VGG19_BN],\n",
@@ -132,24 +145,11 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "case2_v_vgg19_a_resnet = {\n",
-    "        \"query_size\": [20000],\n",
+    "case2_v_vgg19 = {\n",
+    "        \"query_size\": [25000],\n",
     "        \"query_type\": ['coreset'],\n",
     "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": VGG19_BN}],\n",
-    "        \"attacker\":[RESNET34, RESNET50],\n",
-    "        \"k_logits\": [None]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "case2_v_vgg19_a_vgg19 = {\n",
-    "        \"query_size\": [20000],\n",
-    "        \"query_type\": ['coreset'],\n",
-    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": VGG19_BN}],\n",
-    "        \"attacker\":[VGG19_BN],\n",
+    "        \"attacker\":[RESNET34, RESNET50, VGG19_BN],\n",
     "        \"k_logits\": [None]\n",
     "}"
    ]
