--- a/notebooks/case3_logits.ipynb
+++ b/notebooks/case3_logits.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/Aishu/dl-model-extraction'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.chdir(\"../\")\n",
@@ -13,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "idQmKzBgZqug"
    },
@@ -51,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +95,42 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PARAMETERS for investigation:\n",
+      "{'attacker': ['resnet34'],\n",
+      " 'k_logits': [3, 10],\n",
+      " 'query_size': [25000],\n",
+      " 'query_type': ['coreset'],\n",
+      " 'victim': [{'data': 'cifar_10', 'model_name': 'resnet50'}]}\n",
+      "---------------------------------------------------------------------------\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Querying resnet50 victim on cifar_10 dataset\n",
+      "\t- input:10000 queried:10000 -victim acc: 0.9364999532699585\n",
+      "Sampling using None with query size 10000\n",
+      "\t- input:10000 sampled:10000\n",
+      "Sampling using coreset with query size 25000\n",
+      "\t- input:50000 sampled:25000\n",
+      "\n",
+      "-----------------------------------------------------------------------------\n",
+      "\tDataset: cifar_10\n",
+      "\tVictim: resnet50\tAttacker: resnet34\n",
+      "\tQuery Type: coreset\tQuery Size: 25000\tLogits: 3\n",
+      "-----------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 85%|██████████████████████████████████▊      | 68/80 [1:34:11<16:38, 83.23s/it]"
+     ]
+    }
+   ],
    "source": [
     "investigate(case3_logits, seed=42)"
    ]
