case2-1,2 and case3 results done

--- a/notebooks/Attacker.ipynb
+++ b/notebooks/Attacker.ipynb
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Case - 2"
+    "## Case - 2 "
    ]
   },
   {
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Case - 3"
+    "## Case - 3 "
    ]
   },
   {
@@ -228,18 +228,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "Case 5 : Membership inference Transfers"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -265,13 +258,27 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "case4_adverserial = {\n",
-    "        \"query_size\": [20000],\n",
+    "case6_adverserial = {\n",
+    "        \"query_size\": [25000],\n",
     "        \"query_type\": ['coreset'],\n",
     "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
     "        \"attacker\":[RESNET34],\n",
     "        \"k_logits\": [None]\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Case - 7"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Case 7 : Datafree model"
    ]
   },
   {
@@ -289,7 +296,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "investigate(parameters, verbose=True, seed=42)"
@@ -314,10 +321,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "adverserial_experiment(case4_adverserial, epsilon=0.01, seed=42)"
    ]
