--- a/notebooks/case1_cifar10_coreset.ipynb
+++ b/notebooks/case1_cifar10_coreset.ipynb
@@ -348,13 +348,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "raw",
    "metadata": {
     "scrolled": false
@@ -362,6 +355,122 @@
    "source": [
     "investigate(config[\"base\"], seed=42) #to run default config"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir(\"../\")\n",
+    "os.getcwd()\n",
+    "import numpy as np\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss: 0.00019999999494757503, train acc: 100.0\n",
+      "test loss: 2.824899911880493, test acc: 68.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = torch.load('results/case1_cifar10_coreset/A_resnet34_resnet50_cifar_10_coreset_5000_kNone_result')\n",
+    "(train_loss, train_acc, test_loss, test_acc) = results\n",
+    "train_l = np.round_(train_loss[-1].cpu().numpy(), 4)\n",
+    "train_a = np.round_(train_acc[- 1].cpu().numpy() * 100, 2)\n",
+    "test_l = np.round_(test_loss[- 1].cpu().numpy(), 4)\n",
+    "test_a = np.round_(test_acc[- 1].cpu().numpy() * 100, 2)\n",
+    "print(f'train loss: {train_l}, train acc: {train_a}\\ntest loss: {test_l}, test acc: {test_a}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss: 0.00039999998989515007, train acc: 99.92\n",
+      "test loss: 1.4357999563217163, test acc: 74.43\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = torch.load('results/case1_cifar10_coreset/A_resnet34_resnet50_cifar_10_coreset_10000_kNone_result')\n",
+    "(train_loss, train_acc, test_loss, test_acc) = results\n",
+    "train_l = np.round_(train_loss[-1].cpu().numpy(), 4)\n",
+    "train_a = np.round_(train_acc[- 1].cpu().numpy() * 100, 2)\n",
+    "test_l = np.round_(test_loss[- 1].cpu().numpy(), 4)\n",
+    "test_a = np.round_(test_acc[- 1].cpu().numpy() * 100, 2)\n",
+    "print(f'train loss: {train_l}, train acc: {train_a}\\ntest loss: {test_l}, test acc: {test_a}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss: 0.030300000682473183, train acc: 98.34\n",
+      "test loss: 0.9154000282287598, test acc: 79.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = torch.load('results/case1_cifar10_coreset/A_resnet34_resnet50_cifar_10_coreset_25000_kNone_result')\n",
+    "(train_loss, train_acc, test_loss, test_acc) = results\n",
+    "train_l = np.round_(train_loss[-1].cpu().numpy(), 4)\n",
+    "train_a = np.round_(train_acc[- 1].cpu().numpy() * 100, 2)\n",
+    "test_l = np.round_(test_loss[- 1].cpu().numpy(), 4)\n",
+    "test_a = np.round_(test_acc[- 1].cpu().numpy() * 100, 2)\n",
+    "print(f'train loss: {train_l}, train acc: {train_a}\\ntest loss: {test_l}, test acc: {test_a}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss: 0.12759999930858612, train acc: 94.44\n",
+      "test loss: 0.36480000615119934, test acc: 85.34\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = torch.load('results/case1_cifar10_coreset/A_resnet34_resnet50_cifar_10_coreset_50000_kNone_result')\n",
+    "(train_loss, train_acc, test_loss, test_acc) = results\n",
+    "train_l = np.round_(train_loss[-1].cpu().numpy(), 4)\n",
+    "train_a = np.round_(train_acc[- 1].cpu().numpy() * 100, 2)\n",
+    "test_l = np.round_(test_loss[- 1].cpu().numpy(), 4)\n",
+    "test_a = np.round_(test_acc[- 1].cpu().numpy() * 100, 2)\n",
+    "print(f'train loss: {train_l}, train acc: {train_a}\\ntest loss: {test_l}, test acc: {test_a}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
